.k8s/node-api-dockerized-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-api-dockerized-service
  labels:
    app: node-api-dockerized
spec:
  type: NodePort
  selector:
    app: node-api-dockerized
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
